2001-01-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-login-flag-unset-after): now defaulting to 10 rather
	than 3, since login seems to take a little longer.  this means
	that it will less often happen that after logging in, all your
	buddies appear with the "just logged on" message.
	(tnt-version): incremented version to 2.3.2

2001-01-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-sign-on): removed call to toc-init-done
	* tnt.el (tnt-handle-config): added call to toc-init-done

2000-12-01    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed the calls of 
	string-as-unibyte to an if statement checking whether or not 
	the function is bound.
	(tnt-string-as-unibyte-available): Added.
	(tnt-timers-available): Moved things around, now tocstr looks for
	tnt-string-as-unibyte-available before defining.. shoudl solve 
	our problems)

2000-14-07    <tntdevel@brokendreams.net>

	* tnt.el: Changed minor version number.  Now version 2.3

2000-11-07    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed occurances of 
	string-make-unibyte to string-as-unibyte.  This should solve
	the compat problems.

2000-11-06    <tntdevel@brokendreams.net>

	* tocstr.el: (tocstr-init-receiver): the logic here was reversed and 
	has been fixed to reflect the proper logic.  This should compile
	now.

2000-11-06  Jim Whitehead  <tntdevel@sourceforge.net>

	* tocstr.el (tocstr-filet): changed the definitions to reflect
	the proper them-else
	
2000-11-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-list-point): added.
	(tnt-show-buddies): now switching to the buffer before we build
	it.
	(tnt-build-buddy-buffer): now using globally-stored point, rather
	than locally.
	(tnt-get-buddy-at-point): store point.
	(tnt-next-buddy): store point.
	(tnt-prev-buddy): store point.
	(tnt-next-group): store point.
	(tnt-prev-group): store point.
